--- a/app/src/main/res/navigation/navigation_graph.xml
+++ b/app/src/main/res/navigation/navigation_graph.xml
@@ -8,5 +8,14 @@
         android:id="@+id/optionsFragment"
         android:name="com.example.tilesmatch.ui.options.OptionsFragment"
         android:label="OptionsFragment"
-        tools:layout="@layout/fragment_options"/>
+        tools:layout="@layout/fragment_options">
+        <action
+            android:id="@+id/navigateOptionsToGame"
+            app:destination="@id/gameFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/gameFragment"
+        android:name="com.example.tilesmatch.ui.game.GameFragment"
+        android:label="GameFragment"
+        tools:layout="@layout/fragment_game" />
 </navigation>
