update: options fragment impl
1. get options data from repo
2. removed dummy data
3. pass options object as navigation argument

--- a/app/src/main/res/navigation/navigation_graph.xml
+++ b/app/src/main/res/navigation/navigation_graph.xml
@@ -17,5 +17,9 @@
         android:id="@+id/gameFragment"
         android:name="com.example.tilesmatch.ui.game.GameFragment"
         android:label="GameFragment"
-        tools:layout="@layout/fragment_game" />
+        tools:layout="@layout/fragment_game">
+        <argument
+            android:name="option"
+            app:argType="com.example.tilesmatch.models.Option" />
+    </fragment>
 </navigation>
