--- a/app/src/main/res/layout/layout_options_item.xml
+++ b/app/src/main/res/layout/layout_options_item.xml
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tool="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="@dimen/dimen_8dp">
+        android:padding="@dimen/dimen_4dp">
 
-        <TextView
-            android:id="@+id/txt_id"
+        <ImageView
+            android:id="@+id/img_game"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:gravity="center"
@@ -17,8 +16,7 @@
             app:layout_constraintDimensionRatio="H,1:1"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tool:text="55" />
+            app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
