--- a/app/src/main/res/layout/fragment_options.xml
+++ b/app/src/main/res/layout/fragment_options.xml
@@ -30,13 +30,16 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/dimen_16dp"
+            android:backgroundTint="@color/colorAccent"
             android:contentDescription="@string/cd_select_button"
             android:gravity="center"
             android:text="@string/btn_select"
             android:textAllCaps="false"
+            android:textColor="@color/color_background"
             android:textSize="@dimen/dimen_16sp"
             app:icon="@drawable/ic_select"
             app:iconPadding="@dimen/dimen_8dp"
+            app:iconTint="@color/color_background"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
 
