update: ui changes [IV]
1. dialog on completing the game
2. switch for toggling tile number on and off
3. game fragment ui refined
4. tile id on top of tile image
5. content description for reset button

--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -7,17 +7,63 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <ImageView
-            android:id="@+id/img_btn_back"
+        <androidx.cardview.widget.CardView
+            android:id="@+id/card_tool_bar"
             android:layout_width="0dp"
             android:layout_height="?attr/actionBarSize"
-            android:background="?attr/selectableItemBackground"
-            android:contentDescription="@string/cd_back_button"
-            android:padding="@dimen/activity_default_margin"
-            android:src="@drawable/ic_back"
-            app:layout_constraintDimensionRatio="H,1:1"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <ImageView
+                    android:id="@+id/img_btn_back"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:background="?attr/selectableItemBackground"
+                    android:contentDescription="@string/cd_back_button"
+                    android:padding="@dimen/activity_default_margin"
+                    android:src="@drawable/ic_back"
+                    app:layout_constraintDimensionRatio="H,1:1"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
+                    android:id="@+id/txt_game_title"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:gravity="center_vertical"
+                    android:textSize="@dimen/dimen_20sp"
+                    android:textStyle="bold"
+                    app:layout_constrainedWidth="true"
+                    app:layout_constraintEnd_toStartOf="@id/switch_enable_ids"
+                    app:layout_constraintStart_toEndOf="@id/img_btn_back"
+                    tool:text="Catto" />
+
+                <com.google.android.material.switchmaterial.SwitchMaterial
+                    android:id="@+id/switch_enable_ids"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    app:layout_constraintEnd_toStartOf="@id/img_btn_reset"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <ImageView
+                    android:id="@+id/img_btn_reset"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:background="?attr/selectableItemBackgroundBorderless"
+                    android:contentDescription="@string/cd_reset_button"
+                    android:padding="@dimen/activity_default_margin"
+                    android:src="@drawable/ic_reset"
+                    app:layout_constraintDimensionRatio="H,1:1"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </androidx.cardview.widget.CardView>
 
         <TextView
             android:id="@+id/txt_moves_counter"
@@ -28,11 +74,9 @@
             android:layout_marginBottom="@dimen/dimen_8dp"
             android:textSize="@dimen/dimen_20sp"
             android:textStyle="bold"
-            app:layout_constraintBottom_toTopOf="@id/recycler_tiles"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/img_btn_back"
-            app:layout_constraintVertical_chainStyle="packed"
+            app:layout_constraintTop_toBottomOf="@id/recycler_tiles"
             tool:text="Moves: 0" />
 
         <androidx.recyclerview.widget.RecyclerView
@@ -43,28 +87,13 @@
             android:overScrollMode="never"
             android:splitMotionEvents="false"
             app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-            app:layout_constraintBottom_toTopOf="@id/btn_reset"
             app:layout_constraintDimensionRatio="H,1:1"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/txt_moves_counter"
+            app:layout_constraintTop_toBottomOf="@id/card_tool_bar"
             app:spanCount="4"
             tool:itemCount="16"
             tool:listitem="@layout/layout_tiles_item" />
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/btn_reset"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="@dimen/dimen_16dp"
-            android:layout_marginTop="@dimen/dimen_8dp"
-            android:layout_marginBottom="@dimen/dimen_16dp"
-            android:text="@string/btn_reset"
-            app:icon="@drawable/ic_reset"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/recycler_tiles" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
