misc: miscellaneous changes
1. code cleanup
2. code documentation
3. deleting unwanted resources

--- a/app/src/main/res/layout/fragment_options.xml
+++ b/app/src/main/res/layout/fragment_options.xml
@@ -29,7 +29,7 @@
             android:id="@+id/efab_select"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/dimen_16dp"
+            android:layout_margin="@dimen/activity_default_margin"
             android:backgroundTint="@color/colorAccent"
             android:contentDescription="@string/cd_select_button"
             android:gravity="center"
@@ -42,6 +42,5 @@
             app:iconTint="@color/color_background"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
-
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
