--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -69,8 +69,8 @@
             android:id="@+id/txt_moves_counter"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="@dimen/dimen_16dp"
-            android:layout_marginTop="@dimen/dimen_16dp"
+            android:layout_marginHorizontal="@dimen/activity_default_margin"
+            android:layout_marginTop="@dimen/activity_default_margin"
             android:layout_marginBottom="@dimen/dimen_8dp"
             android:textSize="@dimen/dimen_20sp"
             android:textStyle="bold"
@@ -94,6 +94,5 @@
             app:spanCount="4"
             tool:itemCount="16"
             tool:listitem="@layout/layout_tiles_item" />
-
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
