--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -36,6 +36,7 @@
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:gravity="center_vertical"
+                    android:singleLine="true"
                     android:textSize="@dimen/dimen_20sp"
                     android:textStyle="bold"
                     app:layout_constrainedWidth="true"
@@ -47,8 +48,21 @@
                     android:id="@+id/switch_enable_ids"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    app:layout_constraintEnd_toStartOf="@id/img_btn_reset"
+                    app:layout_constraintEnd_toStartOf="@id/img_btn_undo"
                     app:layout_constraintTop_toTopOf="parent" />
+
+                <ImageView
+                    android:id="@+id/img_btn_undo"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:background="?attr/selectableItemBackgroundBorderless"
+                    android:contentDescription="@string/cd_undo_button"
+                    android:padding="@dimen/activity_default_margin"
+                    android:src="@drawable/ic_undo"
+                    app:layout_constraintDimensionRatio="H,1:1"
+                    app:layout_constraintEnd_toStartOf="@id/img_btn_reset"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:tint="@android:color/darker_gray" />
 
                 <ImageView
                     android:id="@+id/img_btn_reset"
@@ -65,20 +79,6 @@
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.cardview.widget.CardView>
 
-        <TextView
-            android:id="@+id/txt_moves_counter"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="@dimen/activity_default_margin"
-            android:layout_marginTop="@dimen/activity_default_margin"
-            android:layout_marginBottom="@dimen/dimen_8dp"
-            android:textSize="@dimen/dimen_20sp"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/recycler_tiles"
-            tool:text="Moves: 0" />
-
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_tiles"
             android:layout_width="0dp"
@@ -94,5 +94,20 @@
             app:spanCount="4"
             tool:itemCount="16"
             tool:listitem="@layout/layout_tiles_item" />
+
+        <TextView
+            android:id="@+id/txt_moves_counter"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/activity_default_margin"
+            android:layout_marginTop="@dimen/activity_default_margin"
+            android:layout_marginBottom="@dimen/dimen_8dp"
+            android:textSize="@dimen/dimen_20sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/recycler_tiles"
+            tool:text="Moves: 0" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
