update: icons and background colours updated

--- a/app/src/main/res/drawable/bg_tile.xml
+++ b/app/src/main/res/drawable/bg_tile.xml
@@ -3,5 +3,5 @@
     android:shape="rectangle">
     <stroke
         android:width="0.5dp"
-        android:color="@color/textColor" />
+        android:color="?attr/colorOnSurface" />
 </shape>
