--- a/app/src/main/res/layout/fragment_options.xml
+++ b/app/src/main/res/layout/fragment_options.xml
@@ -25,22 +25,14 @@
             tool:itemCount="100"
             tool:listitem="@layout/layout_options_item" />
 
-        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
-            android:id="@+id/efab_select"
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/fab_settings"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/activity_default_margin"
-            android:backgroundTint="@color/colorAccent"
-            android:contentDescription="@string/cd_select_button"
-            android:gravity="center"
-            android:text="@string/btn_select"
-            android:textAllCaps="false"
-            android:textColor="@color/color_background"
-            android:textSize="@dimen/dimen_16sp"
-            app:icon="@drawable/ic_select"
-            app:iconPadding="@dimen/dimen_8dp"
-            app:iconTint="@color/color_background"
+            android:contentDescription="@string/cd_settings_button"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:srcCompat="@drawable/ic_settings" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
